--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22,6 +22,25 @@
   font-weight: bold;
 }
 
+.register {
+  width: 100;
+  height: 100vh;
+}
+
+.register .register-box {
+  padding: 20px;
+  width: 500px;
+  min-height: 600px;
+  box-shadow: 10px 10px 100px 10px rgba(0, 0, 0, 0.6);
+  transform: translate(50%, 20%);
+  border-radius: 20px;
+}
+
+.register .register-box .heading {
+  font-size: 20px;
+  font-weight: bold;
+}
+
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
