--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,14 @@
 
 @import 'welcomeExplore';
 
+//Register Page
+
+@import 'register';
+
+//Login Page
+
+@import 'login';
+
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
