--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23,7 +23,6 @@
 }
 
 .register {
-  width: 100;
   height: 100vh;
 }
 
@@ -37,6 +36,24 @@
 }
 
 .register .register-box .heading {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.login {
+  height: 100vh;
+}
+
+.login .login-box {
+  padding: 20px;
+  width: 500px;
+  min-height: 600px;
+  box-shadow: 10px 10px 100px 10px rgba(0, 0, 0, 0.6);
+  transform: translate(50%, 20%);
+  border-radius: 20px;
+}
+
+.login .login-box .heading {
   font-size: 20px;
   font-weight: bold;
 }
@@ -10926,5 +10943,6 @@ a.text-dark:focus {
 body {
   margin: 0;
   padding: 0;
+  background-color: white;
 }
 
