--- a/resources/sass/_editprofile.scss
+++ b/resources/sass/_editprofile.scss
@@ -30,7 +30,9 @@
                 position: absolute;
                 top: 50%;
                 left: 50%;
-                color: white
+                color: white;
+                cursor: pointer;
+
             }
 
             img {
@@ -55,7 +57,8 @@
                     position: absolute;
                     top: 50%;
                     left: 50%;
-                    color: white
+                    color: white;
+                    cursor: pointer;
                 }
 
                 img {
